--- a/spil.css
+++ b/spil.css
@@ -25,7 +25,7 @@ img {
 } */
 }
 #background{
-    background-image: url(https://img.freepik.com/free-vector/isolated-space-background-scene_1308-31590.jpg?w=1380&t=st=1676398836~exp=1676399436~hmac=459750fb788fe016e474ecf88dee6cb1c0a31b29556c255c34dda790c97afc0b);
+    background-image: url(grafik/baggrund1.jpg);
     background-size: cover;
     grid-area: 1 / 1;
    }
@@ -36,9 +36,16 @@ img {
     overflow: hidden;
 }
 
+
+
 #ui {
     grid-area: 1 / 1;
     position: relative;
     overflow: hidden;
     
+}
+
+#source{
+    grid-area: 1 / 1;
+    opacity: 0;
 }
