--- a/spil.css
+++ b/spil.css
@@ -1,51 +1,103 @@
+/* generelt layout */
+
 body {
-    margin: 0;
+  margin: 0;
+  overflow: hidden;
 }
 
 img {
-    width: 100%;
+  width: 100%;
 }
 
-
 #screen {
-    aspect-ratio: 16 / 9;
-    width: 100%;
-    display: grid;
-    grid-template-columns: 100%;
-    grid-template-rows: 100%;
+  aspect-ratio: 16 / 9;
+  width: 100%;
+  display: grid;
+  grid-template-columns: 100%;
+  grid-template-rows: 100%;
+  overflow: hidden;
 }
 
 #game {
-    grid-area: 1 / 1;
-    background-color: blue;
-    /* overflow: hidden; */
-    display: grid;
-    /* grid-template-columns: 100% / 100%;
-    grid-template-rows: 100%;
-} */
+  grid-area: 1 / 1;
+  overflow: hidden;
+  display: grid;
+  grid-template-columns: 10% / 10%;
+  grid-template-rows: 100%;
 }
-#background{
-    background-image: url(grafik/baggrund1.jpg);
-    background-size: cover;
-    grid-area: 1 / 1;
-   }
+#background {
+  background-image: url(grafik/baggrund1.jpg);
+  background-size: cover;
+  grid-area: 1 / 1;
+}
 
 #elements {
-    grid-area: 1 / 1;
-    position: relative;
-    overflow: hidden;
+  grid-area: 1 / 1;
 }
 
+/* elementer */
 
+#water_container {
+  position: absolute;
+  width: 10%;
+  left: 10vw;
+  top: 100px;
+}
 
+#water_sprite {
+}
+#banana_container {
+  width: 10%;
+  position: absolute;
+  top: 60px;
+  left: 30vw;
+}
+
+#banana_sprite {
+}
+#air_container {
+  width: 10%;
+  position: absolute;
+  top: 120px;
+  left: 50vw;
+}
+
+#air_sprite {
+}
+#fuel_container {
+  width: 10%;
+  position: absolute;
+  top: 150px;
+  left: 60vw;
+}
+
+#fuel_sprite {
+}
+#alien_container {
+  width: 10%;
+  position: absolute;
+  top: 200px;
+  left: 80vw;
+}
+
+#alien_sprite {
+}
+#rotten_container {
+  width: 10%;
+  position: absolute;
+  top: 130px;
+  left: 90vw;
+}
+
+#rotten_sprite {
+}
 #ui {
-    grid-area: 1 / 1;
-    position: relative;
-    overflow: hidden;
-    
+  grid-area: 1 / 1;
+  position: relative;
+  overflow: hidden;
 }
 
-#source{
-    grid-area: 1 / 1;
-    opacity: 0;
+#source {
+  grid-area: 1 / 1;
+  opacity: 0;
 }
