--- a/animations.css
+++ b/animations.css
@@ -27,10 +27,10 @@
 
 @keyframes line1 {
   0% {
-    transform: translate(-90vw, 20vh);
+    transform: translate(400%, -10%);
   }
   100% {
-    transform: translate(70vw, 40vh);
+    transform: translate(-400%, 40%);
   }
 }
 
@@ -42,10 +42,10 @@
 
 @keyframes rotate2 {
   0% {
-    rotate: -30deg;
+    rotate: -35deg;
   }
   100% {
-    rotate: 30deg;
+    rotate: 35deg;
   }
 }
 
@@ -68,28 +68,41 @@
   }
 }
 
-/* .falling {
+.falling1 {
   animation-name: falling1;
   animation-duration: 3s;
   animation-iteration-count: infinite;
   animation-timing-function: ease-in;
-} */
+}
 
-.good {
-  animation-name: click_goo, rotate1;
-  animation-duration: 6s;
+.falling2 {
+  animation-name: falling2;
+  animation-duration: 3s;
   animation-iteration-count: infinite;
-  animation-fill-mode: forwards;
-  animation-direction: alternate;
+  animation-timing-function: ease-in;
+}
+
+.rotate2 {
+  animation-name: rotate2;
+  animation-duration: 3s;
+  animation-iteration-count: infinite;
   animation-timing-function: linear;
+  animation-direction: alternate;
+}
+.good {
+  animation-name: click_good;
+  animation-duration: 0.5s;
+  animation-iteration-count: 1;
+  animation-timing-function: linear;
+  animation-fill-mode: forwards;
 }
 
 .bad {
-  animation-name: line1;
-  animation-duration: 5s;
-  animation-iteration-count: infinite;
+  animation-name: click_bad;
+  animation-duration: 0.5s;
+  animation-iteration-count: 1;
   animation-timing-function: linear;
-    animation-direction: reverse;
+  animation-fill-mode: forwards;
 }
 
 .paused {
