--- a/animations.css
+++ b/animations.css
@@ -68,6 +68,40 @@
   }
 }
 
+@keyframes pulse1 {
+  0% {
+    scale: 0.98;
+  }
+  100% {
+    scale: 1.02;
+  }
+}
+
+@keyframes pulse2 {
+  0% {
+    scale: 0.9;
+  }
+  100% {
+    scale: 1.1;
+  }
+}
+
+@keyframes gray_shake {
+  25% {
+    rotate: -45deg;
+  }
+  50% {
+    rotate: 45deg;
+  }
+  75% {
+    rotate: -45deg;
+  }
+  100% {
+    rotate: 45deg;
+    filter: grayscale(100%);
+  }
+}
+
 .falling1 {
   animation-name: falling1;
   animation-duration: 3s;
@@ -105,9 +139,33 @@
   animation-fill-mode: forwards;
 }
 
+.alivege {
+  filter: drop-shadow(0 0 15px yellow);
+  animation-name: pulse1;
+  animation-duration: 1s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  animation-timing-function: linear;
+}
+
+.gainStuff {
+  animation-name: pulse2;
+  animation-iteration-count: 1;
+  animation-duration: 0.2s;
+  animation-direction: alternate;
+  animation-timing-function: linear;
+}
+
+.loseStuff {
+  animation-name: gray_shake;
+  animation-iteration-count: 1;
+  animation-duration: 0.2s;
+  animation-timing-function: linear;
+}
+
+.deadge {
+  filter: blur(0.9px) grayscale(80%);
+}
 .paused {
   animation-play-state: paused;
 }
-
-
-/* ADD ANIMATION FOR SCOREBOARD & LIFE BOARD */
