--- a/spil.css
+++ b/spil.css
@@ -27,6 +27,12 @@ img {
   pointer-events: all;
 }
 
+#start {
+  grid-area: 1 / 1;
+  background-image: url(grafik/start.jpg);
+  background-size: cover;
+}
+
 #elements {
   grid-area: 1 / 1;
   overflow: hidden;
