--- a/animations.css
+++ b/animations.css
@@ -1,6 +1,8 @@
+/* KEYFRAMES */
+
 @keyframes falling1 {
   0% {
-    transform: translate(0vw, -40vh);
+    transform: translate(0, -30vh);
   }
   100% {
     transform: translate(0, 100vh);
@@ -9,30 +11,38 @@
 
 @keyframes falling2 {
   0% {
-    transform: translate(-40vw, -40vh);
+    transform: translate(-20vw, -30vh);
   }
   100% {
-    transform: translate(40vw, 100vh);
+    transform: translate(20vw, 100vh);
   }
 }
 
 @keyframes falling3 {
   0% {
-    transform: translate(40vw, -40vh);
+    transform: translate(20vw, -30vh);
   }
   100% {
-    transform: translate(-40vw, 100vh);
+    transform: translate(-20vw, 100vh);
   }
 }
 
-@keyframes line1 {
+@keyframes straightLine {
   0% {
-    transform: translate(400%, -10%);
+    transform: translate(-10vw, 10vh);
   }
   100% {
-    transform: translate(-400%, 40%);
+    transform: translate(100vw, -10vh);
   }
 }
+
+@keyframes gayLine {
+    0% {
+    transform: translate(-10vw, -20vh);
+  }
+  100% {
+    transform: translate(100vw, 20vh);
+}}
 
 @keyframes rotate1 {
   100% {
@@ -102,18 +112,56 @@
   }
 }
 
+/* CLASSES */
+
 .falling1 {
   animation-name: falling1;
-  animation-duration: 3s;
-  animation-iteration-count: infinite;
+  animation-duration: 1.5s;
+  animation-iteration-count: 1;
   animation-timing-function: ease-in;
 }
 
 .falling2 {
   animation-name: falling2;
-  animation-duration: 3s;
-  animation-iteration-count: infinite;
+  animation-duration: 2s;
+  animation-iteration-count: 1;
   animation-timing-function: ease-in;
+}
+
+.falling3 {
+  animation-name: falling3;
+  animation-duration: 2s;
+  animation-iteration-count: 1;
+  animation-timing-function: ease-in;
+}
+
+.line1 {
+  animation-name: straightLine;
+  animation-duration: 1.7s;
+  animation-iteration-count: 1;
+  animation-timing-function: linear;
+}
+
+.line2{
+  animation-name: straightLine;
+  animation-duration: 1.5s;
+  animation-iteration-count: 1;
+  animation-timing-function: linear;
+  animation-direction: reverse;
+}
+
+.line3{
+    animation-name: gayLine;
+  animation-duration: 1.3s;
+  animation-iteration-count: 1;
+  animation-timing-function: linear;
+}
+.line4{
+    animation-name: gayLine;
+  animation-duration: 1.1s;
+  animation-iteration-count: 1;
+  animation-timing-function: linear;
+  animation-direction: reverse;
 }
 
 .rotate2 {
@@ -165,8 +213,9 @@
 
 .deadge {
   filter: blur(0.9px) grayscale(80%);
-  opacity: 0;
+  /* opacity: 0; */
 }
 .paused {
   animation-play-state: paused;
+  pointer-events: none;
 }
