--- a/animations.css
+++ b/animations.css
@@ -78,12 +78,20 @@
   }
 }
 
-@keyframes pulse1 {
+@keyframes strongPulse {
   0% {
     scale: 0.9;
   }
   100% {
     scale: 1.1;
+  }
+}
+@keyframes weakPulse {
+  0% {
+    scale: 0.95;
+  }
+  100% {
+    scale: 1.05;
   }
 }
 
@@ -119,7 +127,7 @@
 
 .shrink{
   animation-name: time_out;
-  animation-duration: 10s;
+  animation-duration: 1000s;
   animation-iteration-count: 1;
   animation-timing-function: linear;
   animation-fill-mode: forwards;
@@ -225,7 +233,15 @@ border: 1px solid black;
 
 .alivege {
   filter: drop-shadow(0 0 15px yellow);
-  animation-name: pulse1;
+  animation-name: strongPulse;
+  animation-duration: 1s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  animation-timing-function: linear;
+}
+.buttonPulse {
+  filter: drop-shadow(0 0 15px yellow);
+  animation-name: weakPulse;
   animation-duration: 1s;
   animation-iteration-count: infinite;
   animation-direction: alternate;
@@ -233,7 +249,7 @@ border: 1px solid black;
 }
 
 .gainStuff {
-  animation-name: pulse1;
+  animation-name: strongPulse;
   animation-iteration-count: 1;
   animation-duration: 0.2s;
   animation-direction: alternate;
