--- a/spil.css
+++ b/spil.css
@@ -3,6 +3,7 @@
 body {
   margin: 0;
   overflow: hidden;
+  font-family: sans-serif;
 }
 
 img {
@@ -19,6 +20,7 @@ img {
   grid-area: 1 / 1;
   display: grid;
   grid-template: 100% / 100%;
+  user-select: none;
 }
 #background {
   grid-area: 1 / 1;
@@ -46,10 +48,7 @@ img {
   z-index: 100;
   background-size: cover;
   display: grid;
-  /* justify-content: center; */
-  /* align-content: center; */
-  /* grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr; */
+  justify-content: center;
 }
 
 #game_over {
@@ -73,24 +72,69 @@ img {
   align-content: center;
 }
 
+#start div, #game_over div, #level_complete div {
+  /* grid-area: 1 / 1; */
+font-size: 2em;
+margin:2em;
+font-family: Arial, Helvetica, sans-serif;
+font-weight: bold;
+line-height: 1.5em;
+max-height: 10vw;
+color: #ffffff;
+text-align: center;
+word-wrap: break-word;
+
+filter: brightness(80%);
+backdrop-filter: blur(10px);
+-webkit-backdrop-filter: blur(10px);
+text-shadow: 10px;
+
+/* text-decoration-thickness: 100px;
+text-orientation: sideways-right;
+text-shadow: 10px 10px yellow; */
+
+}
+
 h2 {
-  position: relative;
+  /* position: absolute; */
   font-size: 4em;
-  font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-  color: red;
-  margin: 0;
-  /* top: 10vw;
-  align-content: center;
-  justify-content: center; */
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  color: limegreen;
+  text-shadow: 10px;
+  margin: auto;
+  padding: auto;
+  border: auto;
+  /* top:10px; */
+
+    /* -webkit-backdrop-filter: blur(5px); */
+  backdrop-filter: blur(90%);
+
+}
+
+#game_over button, #level_complete button{
+   position: relative;
+  font-size: 2em;
+  margin: auto;
+  padding: auto;
+  /* cursor: pointer; */
+
+  bottom: 0.1vw;
+  background-color: rgb(150, 64, 7);
+  color: #fff4bf;
+  border: 2px solid rgb(4, 4, 41);
+  cursor: pointer;
+  border-radius: 10px;
 }
 
 button {
+  position: relative;
   padding: 0.5em 1em;
   font-size: 2em;
   margin: auto;
-  background-color: red;
+  bottom: 5vw;
+  background-color: rgb(150, 64, 7);
   color: #fff4bf;
-  border: 2px solid blue;
+  border: 2px solid rgb(4, 4, 41);
   cursor: pointer;
   border-radius: 10px;
 }
@@ -105,40 +149,53 @@ button {
 /* UI */
 
 #ui {
-  position: absolute;
-  top: 2vh;
-  right: 15vw;
+  grid-area: 1 / 1;
+  display: grid;
+
   color: white;
 
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 0% 0% 0% 0%;
   font-size: 2em;
-  font-family: sans-serif;
 
   pointer-events: none;
 }
 
 #hp_board {
-  margin-block-start: 0.2em;
+  
   display: grid;
-  grid-template-columns: 5% 5% 5%;
+  grid-template-columns: 0.3fr 0.3fr 0.3fr;
+   grid-template-rows: 0.5fr 0.5fr 0.5fr;
+  /* position: absolute; */
+  /* top: 100px;
+  left: 50vw; */
+  /* margin-block-start: 0.2em;
+  inset-block-start: 50px; */
+
 }
 
 #score_board {
+  /* position: absolute; */
   display: grid;
-  grid-template-columns: 5% 5%;
-  gap: 0.1em;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+  justify-items: start;
+  /* white-space: nowrap; */
 }
 
 #time_board {
   display: grid;
-  grid-template-columns: 5% 5%;
-  margin-block-start: 0.2em;
+  grid-template-columns: 0.1fr;
+  grid-template-rows: 0.1fr;
+  
+  
   /* top:2vw;
   left:30vw */
 }
 
 #accuracy_board {
   display: grid;
-  grid-template-columns: 5% 5%;
+  grid-template-columns: 1fr 1fr;
   margin-block-start: 0.2em;
 }
 
@@ -156,6 +213,8 @@ button {
 
 #banana_container {
   width: 10%;
+  animation-delay: 5s;
+  top: -20%
 }
 
 #air_container {
