--- a/animations.css
+++ b/animations.css
@@ -88,10 +88,10 @@
 }
 @keyframes weakPulse {
   0% {
-    scale: 0.95;
+    scale: 0.98;
   }
   100% {
-    scale: 1.05;
+    scale: 1.02;
   }
 }
 
@@ -120,57 +120,39 @@
   background-color: yellow;
 }
 100%{
-  scale: 1 0;
+  scale: 0 1;
   background-color: red;
 }
 }
 
 .shrink{
   animation-name: time_out;
-  animation-duration: 1000s;
+  animation-duration: 250s;
   animation-iteration-count: 1;
   animation-timing-function: linear;
   animation-fill-mode: forwards;
 }
 
-#time_container{
-position: absolute;
-width: 4vw;
-height: 19vw;
-top: 6vw;
-left: 90vw;
-
-}
-
-#time_sprite{
-width: 4vw;
-height: 19vw;
-top: 6vw;
-left: 90vw;
-transform-origin: 50% 100%;
-background-color: limegreen;
-border: 1px solid black;
-}
 
 /* CLASSES */
 
 .falling1 {
   animation-name: falling1;
-  animation-duration: 1.5s;
-  animation-iteration-count: 1;
+  animation-duration: 2s;
+  animation-iteration-count: 2;
   animation-timing-function: ease-in;
 }
 
 .falling2 {
   animation-name: falling2;
-  animation-duration: 2s;
+  animation-duration: 2.2s;
   animation-iteration-count: 1;
   animation-timing-function: ease-in;
 }
 
 .falling3 {
   animation-name: falling3;
-  animation-duration: 2s;
+  animation-duration: 2.5s;
   animation-iteration-count: 1;
   animation-timing-function: ease-in;
 }
@@ -184,7 +166,7 @@ border: 1px solid black;
 
 .line2{
   animation-name: straightLine;
-  animation-duration: 1.5s;
+  animation-duration: 1.7s;
   animation-iteration-count: 1;
   animation-timing-function: linear;
   animation-direction: reverse;
@@ -192,20 +174,20 @@ border: 1px solid black;
 
 .line3{
     animation-name: gayLine;
-  animation-duration: 1.3s;
+  animation-duration: 1.8s;
   animation-iteration-count: 1;
   animation-timing-function: linear;
 }
 .line4{
     animation-name: gayLine;
-  animation-duration: 1.1s;
+  animation-duration: 1.9s;
   animation-iteration-count: 1;
   animation-timing-function: linear;
   animation-direction: reverse;
 }
 
 .fast{
-  animation-duration: 1.0s;
+  animation-duration: 1.5s;
 }
 
 .rotate2 {
@@ -240,7 +222,7 @@ border: 1px solid black;
   animation-timing-function: linear;
 }
 .buttonPulse {
-  filter: drop-shadow(0 0 15px yellow);
+  filter: drop-shadow(0 0 15px #141010);
   animation-name: weakPulse;
   animation-duration: 1s;
   animation-iteration-count: infinite;
