--- a/spil.css
+++ b/spil.css
@@ -49,6 +49,8 @@ img {
   background-size: cover;
   z-index: 100;
   display: grid;
+    grid-template-columns: 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr;
   justify-content: center;
     align-content: center;
   text-align: center;
@@ -60,6 +62,8 @@ img {
   background-image: url(grafik/game_over.jpg);
   background-size: cover;
   z-index: 100;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
   display: grid;
   justify-content: center;
   align-content: center;
@@ -71,9 +75,12 @@ img {
   background-image: url(grafik/level_complete.jpg);
   background-size: cover;
   z-index: 100;
+    grid-template-columns: 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
   display: grid;
   justify-content: center;
   align-content: center;
+   text-align: center;
 }
 
 #start div,
