--- a/spil.css
+++ b/spil.css
@@ -120,8 +120,9 @@ h2 {
   -webkit-text-fill-color: greenyellow;
   -webkit-text-stroke: 2px black;
 
-  margin-bottom: 1em;
-  margin-top: auto;
+  margin: auto;
+  margin-bottom: auto;
+  /* margin-top: auto; */
 
   backdrop-filter: blur(5px);
   border-radius: 50px;
